--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <h2>LOCATION</h2>
     <div class="map-box">
         <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; color:#ccc;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.2319047704!2d127.00160937642647!3d37.49065677205843!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca160910f0907%3A0x6d859a0f4a864d43!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDrsJjtj6zrsqTri6wgMzAw!5e0!3m2!1sko!2skr!4v1710000000000" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.083012164838!2d126.99860697596819!3d37.50596022759918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca17914ca2433%3A0x216d57171a36dbe4!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDrsJjtj6zrjIDroZwgMzAw!5e0!3m2!1sko!2skr!4v1768116021462!5m2!1sko!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
     <div class="address-info">
