--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <h2>LOCATION</h2>
     <div class="map-box">
         <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; color:#ccc;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.1234!2d127.0000!3d37.5000!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzfCsDMwJzAwLjAiTiAxMjfCsDAwJzAwLjAiRQ!5e0!3m2!1sko!2skr!4v123456789" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.5828876472!2d127.00164831531!3d37.488319379811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca10f1352e851%3A0xc3f9a7647318859!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDrsJjYvOuMgOuhnCAzMDA!5e0!3m2!1sko!2skr!4v1611111111111" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
     <div class="address-info">
@@ -111,7 +111,6 @@
 </footer>
 
 <script>
-    // 내용을 소스코드에서 볼 수 없게 인코딩한 데이터입니다.
     const ENC_DATA = {
         notice1: {
             t: "7KO87Iud7ZqM7IKsIOyXkOydtOy9mO2KuOumrCDshKTrip0g6rO16rOg",
@@ -123,16 +122,16 @@
         }
     };
 
-    const SECRET_KEY = "cXVlZW4wNjE2"; // queen0616
+    const SECRET_KEY = "cXVlZW4wNjE2"; 
 
-    // 한글 복구 함수
-    function d_str(s) {
+    function decodeUtf8(b64) {
         try {
-            return decodeURIComponent(atob(s).split('').map(function(c) {
-                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
-            }).join(''));
+            const binString = atob(b64);
+            const bytes = Uint8Array.from(binString, (m) => m.codePointAt(0));
+            return new TextDecoder().decode(bytes);
         } catch (e) {
-            return "내용을 불러오는 중 오류가 발생했습니다.";
+            console.error("Decoding error:", e);
+            return "내용을 표시할 수 없습니다.";
         }
     }
 
@@ -145,8 +144,11 @@
         if (window.btoa(pw) === SECRET_KEY) {
             const modal = document.getElementById("noticeModal");
             const body = document.getElementById("modalBody");
-            // 암호화된 데이터를 한글로 풀어서 출력
-            body.innerHTML = `<h3>${d_str(ENC_DATA[id].t)}</h3><p>${d_str(ENC_DATA[id].c)}</p>`;
+            
+            const title = decodeUtf8(ENC_DATA[id].t);
+            const content = decodeUtf8(ENC_DATA[id].c);
+            
+            body.innerHTML = `<h3>${title}</h3><p>${content}</p>`;
             modal.style.display = "block";
         } else {
             alert("비밀번호가 일치하지 않습니다.");
