--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
 <script>
     const DATA = {
         notice1: {
-            t: "\uc700\uc2dd\ud68c\uc0ac\u0020\uc5d0\uc774\ucf58\ud2b8\ub9ac\u0020\uc124\ub9bd\u0020\uac30\uace0",
-            c: "\uc700\uc2dd\ud68c\uc0ac\u0020\uc5d0\uc774\ucf58\ud2b8\ub9ac\ub294\u0020\u0032\u0030\u0032\u0036\ub144\u0020\u0031\uc6d4\u0020\u0031\u0031\uc77c\u0020\ubc1c\uae30\uc778\u0020\ucd1d\ud68c\ub9bc\u0020\uac70\uccd0\u0020\uc815\uc2dd\u0020\uc124\ub9bd\ub418\uc5c8\uc74c\uc744\u0020\uac30\uace0\ud569\ub2c8\ub2e4\u002e\n\n\u0031\u002e\u0020\uc0c1\ud638\u003a\u0020\uc5d0\uc774\ucf58\ud2b8\ub9ac\u0020\uc700\uc2dd\ud68c\uc0ac\n\u0032\u002e\u0020\ubcf8\uc810\u003a\u0020\uc11c\uc6b8\ud2b9\ubcc4\uc2dc\u0020\uc11c\ucd08\uad6c\u0020\ubc18\ud3ec\ub300\ub85c\u0020\u0033\u0030\u0030\n\u0033\u002e\u0020\uac30\uace0\ubc29\ubc95\u003a\u0020\ub2e9\uc0ac\u0020\uc778\ud130\ub137\u0020\ud648\ud398\uc774\uc9c0"
+            t: "\uc8fc\uc2dd\ud68c\uc0ac\u20\uc5d0\uc774\ucf58\ud2b8\ub9ac\u20\uc124\ub9bd\u20\uacf5\uace0",
+            c: "\uc8fc\uc2dd\ud68c\uc0ac\u20\uc5d0\uc774\ucf58\ud2b8\ub9ac\ub294\u20\u0032\u0030\u0032\u0036\ub144\u20\u0031\uc6d4\u20\u0031\u0031\uc77c\u20\ubc1c\uae30\uc778\u20\ucd1d\ud68c\ub9bc\u20\uac70\uccd0\u20\uc815\uc2dd\u20\uc124\ub9bd\ub418\uc5c8\uc74c\uc744\u20\uacf5\uace0\ud569\ub2c8\ub2e4\u002e\n\n\u0031\u002e\u20\uc0c1\ud638\u003a\u20\uc5d0\uc774\ucf58\ud2b8\ub9ac\u20\uc8fc\uc2dd\ud68c\uc0ac\n\u0032\u002e\u20\ubcf8\uc810\u003a\u20\uc11c\uc6b8\ud2b9\ubcc4\uc2dc\u20\uc11c\ucd08\uad6c\u20\ubc18\ud3ec\ub300\ub85c\u20\u0033\u0030\u0030\n\u0033\u002e\u20\uacf5\uace0\ubc29\ubc95\u003a\u20\ub2e9\uc0ac\u20\uc778\ud130\ub137\u20\ud648\ud398\uc774\uc9c0"
         },
         notice2: {
-            t: "\uac30\uace0\ubc29\ubc95\uc5d0\u0020\uad00\ud55c\u0020\uc548\ub0b4",
-            c: "\ub2e9\uc0ac\ub294\u0020\uc815\uad00\u0020\uc81c\u0034\uc870\uc5d0\u0020\uc758\uac70\ud558\uc5ec\u0020\ud68c\uc0ac\uc758\u0020\uac30\uace0\ub9bc\u0020\uc778\ud130\ub137\u0020\ud648\ud398\uc774\uc9c0\uc5d0\u0020\uac8c\uc7ac\ud569\ub2c8\ub2e4\u002e\n\ub2e8\u002c\u0020\uc804\uc0b0\uc7a5\uc560\u0020\ub4f1\u0020\ubd80\ub4dd\uc774\ud55c\u0020\uc0ac\uc720\u0020\ubc1c\uc0dd\u0020\uc2dc\u0020\uc11c\uc6b8\ud2b9\ubcc4\uc2dc\uc5d0\uc11c\u0020\ubc1c\ud589\ud558\ub294\u0020\uc77c\uac04\uc9c0\uc5d0\u0020\uac8c\uc7ac\ud560\u0020\uc218\u0020\uc748\uc2b5\ub2c8\ub2e4\u002e"
+            t: "\uacf5\uace0\ubc29\ubc95\uc5d0\u20\uad00\ud55c\u20\uc548\ub0b4",
+            c: "\ub2e9\uc0ac\ub294\u20\uc815\uad00\u20\uc81c\u0034\uc870\uc5d0\u20\uc758\uac70\ud558\uc5ec\u20\ud68c\uc0ac\uc758\u20\uacf5\uace0\ub9bc\u20\uc778\ud130\ub137\u20\ud648\ud398\uc774\uc9c0\uc5d0\u20\uac8c\uc7ac\ud569\ub2c8\ub2e4\u002e\n\ub2e8\u002c\u20\uc804\uc0b0\uc7a5\uc560\u20\ub4f1\u20\ubd80\ub4dd\uc774\ud55c\u20\uc0ac\uc720\u20\ubc1c\uc0dd\u20\uc2dc\u20\uc11c\uc6b8\ud2b9\ubcc4\uc2dc\uc5d0\uc11c\u20\ubc1c\ud589\ud558\ub294\u20\uc77c\uac04\uc9c0\uc5d0\u20\uac8c\uc7ac\ud560\u20\uc218\u20\uc788\uc2b5\ub2c8\ub2e4\u002e"
         }
     };
 
