--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <section id="map" style="border-bottom:none;">
     <h2>LOCATION</h2>
     <div class="map-box">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.238327318712!2d127.0044557!3d37.4905387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca1420b998399%3A0x6b4923e3e07f7c4c!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDrsJjYvOuMgOuhnCAzMDA!5e0!3m2!1sko!2skr!4v1700000000000" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.083012164838!2d126.99860697596819!3d37.50596022759918!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca17914ca2433%3A0x216d57171a36dbe4!2z7ISc7Jq47Yq567OE7IucIOyEnOy0iOq1rCDrsJjtj6zrjIDroZwgMzAw!5e0!3m2!1sko!2skr!4v1768116021462!5m2!1sko!2skr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
     <div class="address-info">
         <p>서울특별시 서초구 반포대로 300</p>
