--- a/index.html
+++ b/index.html
@@ -112,20 +112,26 @@
     const DATA = {
         notice1: {
             title: "주식회사 에이콘트리 설립 공고",
-            content: `주식회사 에이콘트리는 2026년 01월 11일 발기인 총회의 결의로 설립되었음을 상법 제289조 규정에 의거하여 공고합니다.
+            content: `주식회사 에이콘트리는 2026년 01월 23일 발기인 총회의 결의로 설립되었음을 상법 제289조 규정에 의거하여 공고합니다.
 
 1. 상호: 주식회사 에이콘트리
-2. 목적: 솔루션 개발 및 공급업 등
-3. 발행할 주식의 총수: 1,000,000주
-4. 설립 시 발행하는 주식의 총수: 10,000주
-5. 1주의 금액: 500원
+2. 목적:  
+    기업의 경영, 전략, 조직, 재무 등에 관한 컨설팅업
+    자기자금에 의한 유가증권 및 금융상품의 투자 및 보유
+    도서출판업 
+    전자상거래업 
+    통신판매업 
+    위 각 호에 부대되는 일체의 사업 
+3. 발행할 주식의 총수: 100,000주
+4. 설립 시 발행하는 주식의 총수: 1,000주
+5. 1주의 금액: 5000원
 6. 공고방법: 당사 인터넷 홈페이지에 게재`
         },
         notice2: {
             title: "공고방법에 관한 안내",
             content: `당사는 정관 제4조에 의거하여 주주총회의 소집공고 등 회사의 공고를 인터넷 홈페이지에 게재합니다. 
 
-다만, 전산장애 등 부득이한 사유가 발생할 경우에는 서울특별시에서 발행하는 일간지 매일경제신문에 게재합니다.`
+다만, 전산장애 등 부득이한 사유가 발생할 경우에는 서울특별시에서 발행하는 일간지 서울신문에 게재합니다.`
         }
     };
     
