--- a/index.html
+++ b/index.html
@@ -122,10 +122,16 @@
     전자상거래업 
     통신판매업 
     위 각 호에 부대되는 일체의 사업 
-3. 발행할 주식의 총수: 100,000주
-4. 설립 시 발행하는 주식의 총수: 1,000주
-5. 1주의 금액: 5000원
+3. 설립일: 2026년 1월 23일 
+4. 본점: 서울특별시 서초구 반포대로 300
+5. 발행할 주식의 총수: 100,000주
+6. 설립 시 발행하는 주식의 총수: 1,000주
+7. 1주의 금액: 5,000원
 6. 공고방법: 당사 인터넷 홈페이지에 게재`
+
+2026년 1월 23일
+주식회사 에이콘트리
+대표이사
         },
         notice2: {
             title: "공고방법에 관한 안내",
