--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
     const DATA = {
         notice1: {
             title: "주식회사 에이콘트리 설립 공고",
-            content: `주식회사 에이콘트리는 2026년 01월 23일 발기인 총회의 결의로 설립되었음을 상법 제289조 규정에 의거하여 공고합니다.
+            content: `주식회사 에이콘트리는 2026년 1월 23일 상법에 따라 설립되었음을 공고합니다.
 
 1. 상호: 주식회사 에이콘트리
 2. 목적:  
-    기업의 경영, 전략, 조직, 재무 등에 관한 컨설팅업
-    자기자금에 의한 유가증권 및 금융상품의 투자 및 보유
-    도서출판업 
-    전자상거래업 
-    통신판매업 
-    위 각 호에 부대되는 일체의 사업 
+   - 기업의 경영, 전략, 조직, 재무 등에 관한 컨설팅업
+   - 자기자금에 의한 유가증권 및 금융상품의 투자 및 보유
+   - 도서출판업 
+   - 전자상거래업   
+   - 통신판매업
+   - 위 각 호에 부대되는 일체의 사업 
 3. 설립일: 2026년 1월 23일 
 4. 본점: 서울특별시 서초구 반포대로 300
 5. 발행할 주식의 총수: 100,000주
 6. 설립 시 발행하는 주식의 총수: 1,000주
 7. 1주의 금액: 5,000원
-6. 공고방법: 당사 인터넷 홈페이지에 게재`
+8. 공고방법: 당사 인터넷 홈페이지에 게재`
 
 2026년 1월 23일
 주식회사 에이콘트리
